# NewsCollector

./: .cursorrules  .gitignore  analyze_phase1_results.py  auto_test.py  auto_test_news_generation.py  debug_body_loss.py  debug_entity.py  debug_format_auto.py  debug_format_selection.py  debug_full_pipeline.py  debug_generation.py  debug_html_render.py  debug_image_info.py  debug_number_extraction.py  debug_scraping.py  debug_title_generation_detailed.py  generate_comparison_page.py  generate_html_news.py  generate_nice_html.py  generate_test_report.py  main.py  news_comparison_삼성전자_20260207_141851.html  news_comparison_삼성전자_20260207_142921.html  news_comparison_삼성전자_20260207_144013.html  news_comparison_인공지능_20260207_143318.html  news_comparison_테슬라_20260207_144444.html  news_comparison_테슬라_20260207_145614.html  news_output.html  news_output_nice.html  news_web_simple.py  phase1_final_report.html  phase_1_2_final_report.html  progress_report_20260207.md  progress_report_20260207_final.md  pyproject.toml  pytest.ini  requirements.txt  search_news.py  test_all_formats.py  test_html_output.py  (+35 more)
.claude/: settings.local.json
config/: generation_config.yaml  news_format_spec.yaml
docs/: PROJECT_ROADMAP.md  module1_request_parser.md  module2_source_registry.md  module3_ingestion.md  module4_normalizer.md  module5_dedup.md  module6_integrity.md  module7_credibility.md  module8_popularity.md  module9_ranker.md
news_collector/: __init__.py
news_collector/config/: config.yaml  logging_config.yaml  natural_language_mapping.yaml  sources_registry.yaml
(+61 files in other folders)
